--- a/src/pages/homepage/Home.css
+++ b/src/pages/homepage/Home.css
@@ -77,7 +77,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
-    max-width: 1800px;
+    max-width: 100vw;
     margin: 0 auto;
   }
   
