--- a/src/pages/homepage/Home.css
+++ b/src/pages/homepage/Home.css
@@ -28,6 +28,7 @@
     text-align: center;
     padding: 5rem 2rem;
 }
+
   .hero-content {
     width: 100%;
     margin: 0 auto;
@@ -77,7 +78,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
-    max-width: 100vw;
+    max-width:100vw;
     margin: 0 auto;
   }
   
@@ -133,6 +134,7 @@ a{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 3%;
   }
   
   .cta {
