--- a/src/pages/leadership/Team.css
+++ b/src/pages/leadership/Team.css
@@ -54,6 +54,7 @@ body {
 .leader-card:hover {
   transform: translateY(-5px);
 }
+
 .leader-image {
   height: 300px;
   width: 100%;
@@ -66,13 +67,33 @@ body {
 }
 .leader-image img {
   width: 100%;
-  height: 100%;
+  /* height: auto; */
   object-fit: cover;
   object-position: center;
   position: absolute;
   top: 0;
   left: 0;
 }
+
+.leader-1 {
+  height: 120%;
+}
+.leader-2 {
+  height: 136%;
+}
+.leader-3 {
+  height: 159%;
+}
+.leader-4 {
+  height: 130%;
+}
+.leader-5 {
+  height: 133%;
+}
+.leader-6 {
+  height: 124%;
+}
+
 .leader-info {
   padding: 1.5rem;
 }
